Included Facebook login-- does not change the Hi Dov on the navbar

--- a/src/comps/style.css
+++ b/src/comps/style.css
@@ -367,6 +367,12 @@ off white: FDFDFD
     margin-bottom: 10px;
 }
 
+.fbphoto {
+    height: 100px;
+    width: 100px;
+}
+
+
 @media only screen and (max-width: 725px) {
     #logoTitle {
         display: none;
